trustfall_core/src/resources/test_data/parse_errors/root_vertex_property_field.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    name
}"#,
    arguments: {},
)
